# DynamicFluency-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_on_push.yml  test_on_push.yml
src/dynamicfluency/: __init__.py  aeneas_conversion.py  languages.py  model_data.py  pos_tagging.py  repetitions.py  repititions.py  syntactic_analysis.py  word_frequencies.py
src/dynamicfluency/data/: __init__.py
src/dynamicfluency/helpers/: __init__.py  conversions.py  database_extensions.py  filepath_extensions.py  textgridtier_extensions.py
src/dynamicfluency/scripts/: add_frequency_dictionairy.py  add_frequency_dictionary.py  convert_aeneas_to_textgrids.py  download_models.py  download_nltk_requirements.py  get_database_columns.py  make_frequencytagged_girds_from_aligned_grids.py  make_frequencytagged_girds_from_alligned_grids.py  make_frequencytagged_girds_from_postagged_grids.py  make_postagged_grids_from_aligned_grids.py  make_postagged_grids_from_alligned_grids.py  make_repetitionstagged_grids_from_postagged_grids.py  make_repititionstagged_grids_from_postagged_grids.py  make_syntax_grids_from_postagged_grids.py
tests/: helpers.py  test_aeneas.py  test_data.py  test_helpers.py  test_scripts.py  test_sql.py  test_tier_generation.py
tests/data/: test_aeneas_bad.json  test_aeneas_good.json  test_word_form.csv  testgrid_lemma.TextGrid  testgrid_manytiers.TextGrid  testgrid_pos.TextGrid  testgrid_word_form.TextGrid  testlemma.csv  valid_pos_tags.csv
